@@ -1,3 +1,7 @@
+notepadpp 7.8.4-13:
+	* product_downloader: modified detection of curl/wget
+	-- J. Boettge <boettge@mpi-halle.mpg.de>	2020-02-06 12:45:26 +0100
+
 notepadpp 7.8.4-12:
 	* product update --> 7.8.4
 	* Makefile: handling of default values made more comfortable
